# booking

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  compose.yaml  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  railway.toml  ruff.toml
.github/: file-filters.yml
.github/workflows/: docs.yml  lint.yml  release.yml  security.yml  test.yml
docker/: Dockerfile  Makefile
docs/src/: .pages  contributing.md  docker.md  index.md  run.md  settings.md
docs/src/run/: dev.md
output/: coverage.xml
src/booking/: admin.py  apps.py  exceptions.py  forms.py  handlers.py  models.py  signals.py  views.py
src/booking/admin/: __init__.py
src/booking/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/booking/migrations/: 0001_initial.py  0002_alter_booking_customer_delete_customer.py  0002_alter_car_description_alter_car_services.py  0002_alter_service_name.py  0003_alter_user_options_user_version.py  0003_booking_start_date_lte_end_date.py  0004_alter_booking_car_alter_booking_customer_and_more.py  0005_delete_feedback.py  0006_auto_20250116_1218.py  0007_remove_booking_not_start_date_eq_end_date_and_start_date_gt_end_date_and_more.py  0008_booking_address_booking_modalita_alter_booking_car_and_more.py
src/booking/models/: __init__.py
src/booking/templates/: _about.html  _carousel.html  _fleet.html  book_add.html  book_delete.html  bookings.html  fleet.html  home.html  index.html  layout.html  login.html  places.html  register.html  registered.html
src/booking/theme/: apps.py
tests/: .coveragerc  conftest.py  test_cache.py  test_login.py  test_models.py  test_views.py
tests/functional/: conftest.py  test_navigation.py
(+13 files in other folders)
